fixed style selector spacing

--- a/client/src/components/productOverview/styles.css
+++ b/client/src/components/productOverview/styles.css
@@ -216,7 +216,7 @@
 .style-selector {
   position: relative;
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .style-selector img {
